# rustgraphblas

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  build.rs  wrapper.h
src/: lib.rs
src/ops/: binops.rs  config.rs  elem_wise.rs  ffi.rs  index.rs  matrix_algebra.rs  mod.rs  monoid.rs  reduce.rs  types.rs  unaryops.rs  vector_algebra.rs
