[package]
name = "rustgrahblas"
version = "0.1.0-alpha"
authors = ["FabianM <murariu.fabian@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["graphblas", "blas", "graph", "algorithms"]
homepage = "https://github.com/fabianmurariu/libgraphblas"
description = "Wrapper for GraphBLAS.h exposing SparseMatrix and SparseVector"
exclude = [".gitignore"]

[dependencies]
paste = "0.1"
lazy_static = "1.4.0"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"

[build-dependencies]
bindgen = "0.53.1"
