[package]
name = "rustgraphblas"
version = "0.16.0-alpha"
authors = ["FabianM <murariu.fabian@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["graphblas", "blas", "graph", "algorithms"]
homepage = "https://github.com/fabianmurariu/rustgraphblas"
description = "Wrapper for GraphBLAS.h exposing SparseMatrix and SparseVector"
exclude = [".gitignore", "deps/*"]

[dependencies]
paste = "1.0.4"
lazy_static = "1.4.0"
enum-primitive-derive = "0.2.1"
num-traits = "0.2.14"
either = "^1.5"

[build-dependencies]
bindgen = "0.58.1"
